--- a/app/src/main/res/layout/create_acc.xml
+++ b/app/src/main/res/layout/create_acc.xml
@@ -5,37 +5,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity">
+    tools:context=".CreateAccountActivity">
 
+    <!-- Keep your existing ImageView -->
     <ImageView
         android:id="@+id/bgImage"
-        android:layout_width="300dp"
-        android:layout_height="150dp"
+        android:layout_width="340dp"
+        android:layout_height="340dp"
         android:contentDescription="@string/background_image_description"
-        android:scaleType="centerInside"
+        android:scaleType="centerCrop"
         android:src="@drawable/background"
-        app:layout_constraintBottom_toTopOf="@+id/dividerView"
+        app:layout_constraintBottom_toTopOf="@id/btnNext"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.5"
-        app:layout_constraintHorizontal_bias="0.612"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.191" />
 
-    <View
-        android:id="@+id/dividerView"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:background="#DADADA"
-        app:layout_constraintTop_toBottomOf="@id/bgImage"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
+    <!-- Keep existing TextViews -->
     <TextView
         android:id="@+id/tvGetStarted"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="172dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/montserrat"
         android:text="@string/get_started"
@@ -44,7 +37,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dividerView" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvGetStarted2"
@@ -61,90 +54,89 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <EditText
-        android:id="@+id/etFullName"
-        android:layout_width="303dp"
-        android:layout_height="50dp"
-        android:autofillHints="name"
-        android:background="@drawable/edit_text_shape"
-        android:drawableEnd="@drawable/user"
-        android:hint="@string/full_name_hint"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
+    <!-- TextInputLayouts for all input fields -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tilFullName"
+        style="@style/AppTheme.TextInputLayout"
+        app:startIconDrawable="@drawable/user"
+        app:layout_constraintTop_toBottomOf="@id/tvGetStarted2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvGetStarted2" />
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <EditText
-        android:id="@+id/etEmail"
-        android:layout_width="303dp"
-        android:layout_height="50dp"
-        android:autofillHints="emailAddress"
-        android:background="@drawable/edit_text_shape"
-        android:drawableEnd="@drawable/mail"
-        android:hint="@string/valid_email_hint"
-        android:inputType="textEmailAddress"
-        app:layout_constraintTop_toBottomOf="@id/etFullName"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etFullName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/full_name_hint"
+            android:inputType="textPersonName"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tilEmail"
+        style="@style/AppTheme.TextInputLayout"
+        app:startIconDrawable="@drawable/mail"
+        app:layout_constraintTop_toBottomOf="@id/tilFullName"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp" />
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <EditText
-        android:id="@+id/etPhoneNumber"
-        android:layout_width="303dp"
-        android:layout_height="50dp"
-        android:autofillHints="phone"
-        android:background="@drawable/edit_text_shape"
-        android:drawableEnd="@drawable/smartphone"
-        android:hint="@string/phone_hint"
-        android:inputType="phone"
-        app:layout_constraintTop_toBottomOf="@id/etEmail"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/valid_email_hint"
+            android:inputType="textEmailAddress"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tilPhoneNumber"
+        style="@style/AppTheme.TextInputLayout"
+        app:startIconDrawable="@drawable/smartphone"
+        app:layout_constraintTop_toBottomOf="@id/tilEmail"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp" />
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <EditText
-        android:id="@+id/etPassword"
-        android:layout_width="303dp"
-        android:layout_height="50dp"
-        android:autofillHints="password"
-        android:background="@drawable/edit_text_shape"
-        android:drawableEnd="@drawable/lock"
-        android:hint="@string/strong_password_hint"
-        android:inputType="textPassword"
-        app:layout_constraintTop_toBottomOf="@id/etPhoneNumber"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etPhoneNumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/phone_hint"
+            android:inputType="phone"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tilPassword"
+        style="@style/AppTheme.TextInputLayout"
+        app:startIconDrawable="@drawable/lock"
+        app:layout_constraintTop_toBottomOf="@id/tilPhoneNumber"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp" />
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <CheckBox
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/strong_password_hint"
+            android:inputType="textPassword"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.checkbox.MaterialCheckBox
         android:id="@+id/cbTermsAndConditions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/terms"
         android:textSize="11sp"
-        app:layout_constraintTop_toBottomOf="@id/etPassword"
+        app:layout_constraintTop_toBottomOf="@id/tilPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.85"
         android:layout_marginTop="32dp" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btnNext"
-        android:layout_width="303dp"
-        android:layout_height="50dp"
-        android:background="@drawable/button_shape"
+        style="@style/AppTheme.Button"
         android:text="@string/next2"
-        android:textColor="@android:color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cbTermsAndConditions"
-        android:layout_marginTop="32dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
         android:id="@+id/tvAlreadyMember"
