--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -52,7 +52,8 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilEmail"
         style="@style/AppTheme.TextInputLayout"
-        app:startIconDrawable="@drawable/mail"
+        app:endIconMode="custom"
+        app:endIconDrawable="@drawable/mail"
         app:layout_constraintTop_toBottomOf="@id/tvSignInPrompt"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +70,8 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilPassword"
         style="@style/AppTheme.TextInputLayout"
-        app:startIconDrawable="@drawable/lock"
+        app:endIconMode="custom"
+        app:endIconDrawable="@drawable/lock"
         app:passwordToggleEnabled="true"
         app:layout_constraintTop_toBottomOf="@id/tilEmail"
         app:layout_constraintStart_toStartOf="parent"
