--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,6 @@
 
     <color name="stroke_color">#ecf0f1</color>
     <color name="black">#000000</color>
-    <color name="white">#000000</color>
+    <color name="white">#FFFFFF</color>
     <color name="divider">#d8dddf</color>
 </resources>
